--- a/jbake.properties
+++ b/jbake.properties
@@ -1,10 +1,10 @@
-site.host=https://manikmagar.github.io/jbake-future-imperfect-template
-site.title=JBake Blog
+site.host=https://luisgc.github.io/blog
+site.title=Luiyolog&iacute;a
 
-site.author=Manik Magar
+site.author=Luis GC
 site.author.avatar=img/main/avatar.png
 
-site.disqus.shortname=
+site.disqus.shortname=luiyologia
 site.google.trackingid=
 
 #ReadTimes are displayed using https://github.com/michael-lynch/reading-time
@@ -38,65 +38,67 @@ site.menus.main.about.url=about.html
 site.menus.main.about.icon=fa fa-user
 
 #How many recent posts should be shown in sidebar
-sidebar.postAmount=2
+sidebar.postAmount=3
 sidebar.viewMorePostLink=archive.html
 
 sidebar.tags.show=true
 # Until JBake 2.5.1, freemarker templates do not support calling db. So disable counts for lower JBake.
-sidebar.tags.show.count=false
+sidebar.tags.show.count=true
 
-sidebar.intro.pic.src = img/main/icon.png
+sidebar.intro.pic.src = img/main/Luiyologia-twitterlogo.png
 # modify your picture in the shape of a circle or
 # future imperfect's hexagonal shape
-sidebar.intro.pic.circle    = true
+sidebar.intro.pic.circle    = false
 sidebar.intro.pic.imperfect = false
-sidebar.intro.pic.width     = 150px
-sidebar.intro.pic.alt       = Jbake Blog
+sidebar.intro.pic.width     = 320px
+sidebar.intro.pic.alt       = Luiyolog&iacute;a
 
-sidebar.intro.header =JBake Blog
+sidebar.intro.header =Luiyolog&iacute;a
 sidebar.intro.summary =Another blog baked with JBake.
-sidebar.intro.about =Another great static site baked with JBake.
-sidebar.intro.about.learnMore=about.html 
+
+sidebar.intro.license.text      =<a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/">Creative Commons Attribution-ShareAlike 3.0 (CC BY-SA 3.0)</a>
+sidebar.intro.license.pic.src   =img/main/CC_BY_SA.png
+sidebar.intro.license.pic.width = 90px
+sidebar.intro.license.pic.alt   = Creative Commons Attribution-ShareAlike 3.0 Unported (CC BY-SA 3.0)
+sidebar.intro.about.learnMore   =http://creativecommons.org/licenses/by-sa/3.0/
 
 # Social links are shown when related id's are mentioned
 sidebar.social.show = true
-sidebar.social.github          = manikmagar
-sidebar.social.bitbucket       = 
-sidebar.social.jsfiddle        = 
-sidebar.social.codepen         = 
-sidebar.social.foursquare      = 
-sidebar.social.dribbble        = 
-sidebar.social.deviantart      = 
-sidebar.social.behance         = 
-sidebar.social.flickr          = 
-sidebar.social.instagram       = 
-sidebar.social.youtube         = 
-sidebar.social.vimeo           = 
-sidebar.social.vine            = 
-sidebar.social.medium          = 
-sidebar.social.wordpress       = 
-sidebar.social.tumblr          = 
-sidebar.social.xing            = 
-sidebar.social.linkedin        = 
-sidebar.social.slideshare      = 
-sidebar.social.stackoverflow   = 
-sidebar.social.reddit          = 
-sidebar.social.pinterest       = 
-sidebar.social.googleplus      = 
-sidebar.social.facebook        = 
-sidebar.social.facebook_admin  = 
-sidebar.social.twitter_domain  = 
-sidebar.social.twitter         = manikmagar
-sidebar.social.email           = 
-
+sidebar.social.github          = luisgc
+sidebar.social.bitbucket       =
+sidebar.social.jsfiddle        =
+sidebar.social.codepen         =
+sidebar.social.foursquare      = luiyo
+sidebar.social.dribbble        =
+sidebar.social.deviantart      =
+sidebar.social.behance         =
+sidebar.social.flickr          = luiyo
+sidebar.social.instagram       =
+sidebar.social.youtube         =
+sidebar.social.vimeo           =
+sidebar.social.vine            =
+sidebar.social.medium          = luisgc
+sidebar.social.wordpress       =
+sidebar.social.tumblr          =
+sidebar.social.xing            =
+sidebar.social.linkedin        = luisgc
+sidebar.social.slideshare      =
+sidebar.social.stackoverflow   = 2048829/luisgc
+sidebar.social.reddit          = Luiyo
+sidebar.social.pinterest       =
+sidebar.social.googleplus      = LuisGarc&iacute;aCastro
+sidebar.social.facebook        =
+sidebar.social.facebook_admin  =
+sidebar.social.twitter_domain  =
+sidebar.social.twitter         = luiyo
+sidebar.social.email           = luiyologia@gmail.com
 
 index.paginate=true
-index.posts_per_page=1
+index.posts_per_page=5
 
 output.extension=.html
 uri.noExtension=false
 uri.noExtension.prefix=/blog
-
 
 render.tags=true
 render.sitemap=true
