tag list styles improved

--- a/jbake.properties
+++ b/jbake.properties
@@ -16,7 +16,6 @@ site.menus.main = home, archive, about, rss
 #site.menus.{menuitem}.home.url=/
 #site.menus.{menuitem}.home.icon=fa fa-home
 
-
 ## You must have a menu item named 'tags' in the main menu list
 # Possible to auto add Tags dropdown, not rendered correctly as of now.
 #site.menus.main.showTagsDropdown = true
@@ -82,7 +81,7 @@ sidebar.social.wordpress       =
 sidebar.social.tumblr          =
 sidebar.social.xing            =
 sidebar.social.linkedin        = luisgc
-sidebar.social.slideshare      =
+sidebar.social.slideshare      = LuisGarcaCastro
 sidebar.social.stackoverflow   = 2048829/luisgc
 sidebar.social.reddit          = Luiyo
 sidebar.social.pinterest       =
