blog summary added

--- a/jbake.properties
+++ b/jbake.properties
@@ -55,7 +55,7 @@ sidebar.intro.pic.width     = 320px
 sidebar.intro.pic.alt       = Luiyolog&iacute;a
 
 sidebar.intro.header =Luiyolog&iacute;a
-sidebar.intro.summary =Another blog baked with JBake.
+sidebar.intro.summary =The Science that studies my interests
 
 sidebar.intro.license.text      =<a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/">Creative Commons Attribution-ShareAlike 3.0 (CC BY-SA 3.0)</a>
 sidebar.intro.license.pic.src   =img/main/CC_BY_SA.png
