medium and foursquare removed

--- a/jbake.properties
+++ b/jbake.properties
@@ -69,7 +69,7 @@ sidebar.social.github          = luisgc
 sidebar.social.bitbucket       =
 sidebar.social.jsfiddle        =
 sidebar.social.codepen         =
-sidebar.social.foursquare      = luiyo
+sidebar.social.foursquare      =
 sidebar.social.dribbble        =
 sidebar.social.deviantart      =
 sidebar.social.behance         =
@@ -78,7 +78,7 @@ sidebar.social.instagram       =
 sidebar.social.youtube         =
 sidebar.social.vimeo           =
 sidebar.social.vine            =
-sidebar.social.medium          = luisgc
+sidebar.social.medium          =
 sidebar.social.wordpress       =
 sidebar.social.tumblr          =
 sidebar.social.xing            =
