--- a/circle.yml
+++ b/circle.yml
@@ -20,6 +20,7 @@ deployment:
       - rm -rf docs/*
       - jbake -b . ./docs
       - find docs -type f -exec sed -i 's/src="\/img/src="\/blog\/img/g' {} +
+      - find docs -type f -exec sed -i 's/src=\&quot;\/img/src=\&quot;\/blog\/img/g' {} +
       - git add docs
       - git commit --message "Generated site on $(date) [ci skip]"
       - git push origin master
