--- a/circle.yml
+++ b/circle.yml
@@ -11,9 +11,8 @@ deployment:
   master:
     branch: hugo
     commands:
-      - git pull
       - rm -rf docs/*
       - hugo -d ./docs
       - git add docs
       - git commit --message "Generated site on $(date) [ci skip]"
-      - git push origin master
+      - git push origin hugo
