--- a/circle.yml
+++ b/circle.yml
@@ -14,7 +14,7 @@ deployment:
       - hugo
     commands:
       - rm -rf docs
-      - hugo -d docs -t hugo-future-imperfect
+      - hugo -d docs -b "/blog" -t hugo-future-imperfect
       - git add docs
       - git commit --message "Generated site on $(date) [ci skip]"
       - git push origin hugo
