--- a/circle.yml
+++ b/circle.yml
@@ -14,7 +14,9 @@ deployment:
       - hugo
     commands:
       - rm -rf docs
-      - hugo -d docs -b "/blog" -t hugo-future-imperfect
+      - hugo -d docs -t hugo-future-imperfect
+      - find docs -type f -exec sed -i 's/src="\/img/src="\/blog\/img/g' {} +
+      - find docs -type f -exec sed -i 's/src=\&quot;\/img/src=\&quot;\/blog\/img/g' {} +
       - git add docs
       - git commit --message "Generated site on $(date) [ci skip]"
       - git push origin hugo
