--- a/circle.yml
+++ b/circle.yml
@@ -11,12 +11,15 @@ deployment:
   master:
     branch:
       - master
-      - hugo
     commands:
       - rm -rf docs
       - hugo -d docs -t hugo-future-imperfect
       - find docs -type f -exec sed -i 's/src="\/img/src="\/blog\/img/g' {} +
       - find docs -type f -exec sed -i 's/src=\&quot;\/img/src=\&quot;\/blog\/img/g' {} +
+      - find docs -type f -exec sed -i 's/src="\/css/src="\/blog\/css/g' {} +
+      - find docs -type f -exec sed -i 's/src=\&quot;\/css/src=\&quot;\/blog\/css/g' {} +
+      - find docs -type f -exec sed -i 's/src="\/js/src="\/blog\/js/g' {} +
+      - find docs -type f -exec sed -i 's/src=\&quot;\/js/src=\&quot;\/blog\/js/g' {} +
       - git add docs
       - git commit --message "Generated site on $(date) [ci skip]"
       - git push origin hugo
