--- a/config.toml
+++ b/config.toml
@@ -1,11 +1,11 @@
-baseurl = "/"
+baseurl = "http://luiyo.net/blog"
 languageCode = "en-us"
 title = "Luiyología"
 theme = "hugo-future-imperfect"
 preserveTaxonomyNames = true
 paginate = 5
-disqusShortname = "luiyologia"
-googleAnalytics = "UA-555064-1"
+disqusShortname = "" #"luiyologia"
+googleAnalytics = "" #"UA-555064-1"
 pluralizeListTitles = false
 
 [outputFormats]
