--- a/config.toml
+++ b/config.toml
@@ -33,7 +33,7 @@ baseName = "feed"
   # Sets Categories to sort by number of posts instead of alphabetical
   categoriesByCount    = true
   # set to show or to hide categories in the sidebar
-  showSidebarCategories = true
+  showSidebarCategories = false
   # Sets Estimated Reading Time to appear in post headers
   includeReadingTime   = true
   # Sets the Favicon and Version for the site. Default support is for
@@ -112,7 +112,7 @@ baseName = "feed"
 # Identifier prepends a Font Awesome icon to the menu item
 [[menu.main]]
   name = "Home"
-  url = "/"
+  url = "http://luiyo.net/"
   identifier = "fa fa-home"
   weight = 1
 
@@ -124,7 +124,7 @@ baseName = "feed"
 
 [[menu.main]]
   name = "Blog"
-  url = "/blog/"
+  url = "/"
   identifier = "fa fa-newspaper-o"
   weight = 3
 
