--- a/circle.yml
+++ b/circle.yml
@@ -91,33 +91,23 @@ jobs:
 #        path: /tmp/circleci-artifacts
 #    - store_artifacts:
 #        path: /tmp/circleci-test-results
-  generate-docs:
-    parallelism: 1
-    working_directory: ~/LuisGC/blog
-    docker:
-    - image: circleci/build-image:ubuntu-14.04-XXL-upstart-1189-5614f37
-      command: /sbin/init
-    steps:
-      - rm -rf docs
-      - hugo -d docs --cleanDestinationDir -b "http://luiyo.net/blog/"
-      - find docs -type f -exec sed -i 's/src="\/img/src="\/blog\/img/g' {} +
-      - find docs -type f -exec sed -i 's/src=\&quot;\/img/src=\&quot;\/blog\/img/g' {} +
-      - find docs -type f -exec sed -i 's/href="\/css/src="\/blog\/css/g' {} +
-      - find docs -type f -exec sed -i 's/href=\&quot;\/css/src=\&quot;\/blog\/css/g' {} +
-      - find docs -type f -exec sed -i 's/src="\/js/src="\/blog\/js/g' {} +
-      - find docs -type f -exec sed -i 's/src=\&quot;\/js/src=\&quot;\/blog\/js/g' {} +
-      - git add docs
-      - git commit --message "Generated site on $(date) [ci skip]"
-      - git push origin master
+    - run: rm -rf docs
+    - run: hugo -d docs --cleanDestinationDir -b "http://luiyo.net/blog/"
+    - run: find docs -type f -exec sed -i 's/src="\/img/src="\/blog\/img/g' {} +
+    - run: find docs -type f -exec sed -i 's/src=\&quot;\/img/src=\&quot;\/blog\/img/g' {} +
+    - run: find docs -type f -exec sed -i 's/href="\/css/src="\/blog\/css/g' {} +
+    - run: find docs -type f -exec sed -i 's/href=\&quot;\/css/src=\&quot;\/blog\/css/g' {} +
+    - run: find docs -type f -exec sed -i 's/src="\/js/src="\/blog\/js/g' {} +
+    - run: find docs -type f -exec sed -i 's/src=\&quot;\/js/src=\&quot;\/blog\/js/g' {} +
+    - run: git add docs
+    - run: git commit --message "Generated site on $(date) [ci skip]"
+    - run: git push origin master
 
 workflows:
   version: 2
-  build_and_deploy:
+  build:
     jobs:
       - build
-      - generate-docs:
-          requires:
-            - build
-          filters:
-            branches:
-              only: master
+    filters:
+      branches:
+        only: master
