--- a/circle.yml
+++ b/circle.yml
@@ -71,7 +71,6 @@ jobs:
             find docs -type f -exec sed -i 's/src="\/js/src="\/blog\/js/g' {} +
             find docs -type f -exec sed -i 's/src=\&quot;\/js/src=\&quot;\/blog\/js/g' {} +
     - run:
-        working_directory: ~/LuisGC/blog
         name: commit the changes
         command: |
             git add docs
@@ -95,7 +94,7 @@ jobs:
     # Test
     #   This would typically be a build job when using workflows, possibly combined with build
     # This is based on your 1.0 configuration file or project settings
-
+    - run: hugo check
     # Deployment
     # Your existing circle.yml file contains deployment steps.
     # The config translation tool does not support translating deployment steps
@@ -112,12 +111,3 @@ jobs:
 #        path: /tmp/circleci-artifacts
 #    - store_artifacts:
 #        path: /tmp/circleci-test-results
-
-workflows:
-  version: 2
-  build:
-    jobs:
-      - build
-#          filters:
-#            branches:
-#              only: master
