--- a/circle_20.yml
+++ b/circle_20.yml
@@ -63,7 +63,7 @@ jobs:
         name: generate docs
         command: |
             rm -rf docs
-            hugo -d docs --cleanDestinationDir -b "http://luiyo.net/blog/"
+            hugo -d docs --cleanDestinationDir -b "https://luiyo.net/blog/"
             find docs -type f -exec sed -i 's/src="\/img/src="\/blog\/img/g' {} +
             find docs -type f -exec sed -i 's/src=\&quot;\/img/src=\&quot;\/blog\/img/g' {} +
             find docs -type f -exec sed -i 's/href="\/css/src="\/blog\/css/g' {} +
