Google+ link removed

--- a/config.toml
+++ b/config.toml
@@ -186,7 +186,7 @@ baseName = "feed"
   slideshare       = "LuisGarcaCastro"
   # Social Networks
   facebook         = ""
-  googleplus       = "LuisGarc&iacute;aCastro"
+  googleplus       = ""
   reddit           = "Luiyo"
   quora            = ""
   youtube          = ""
