--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -71,7 +71,7 @@ jobs:
         paths:
         # This is a broad list of cache paths to include many possible development environments
         # You can probably delete some of these entries
-        # - vendor/bundle
+         - vendor/bundle
         # - ~/virtualenvs
         # - ~/.m2
         # - ~/.ivy2
