--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,6 +17,7 @@ jobs:
     environment:
       CIRCLE_ARTIFACTS: /tmp/circleci-artifacts
       CIRCLE_TEST_REPORTS: /tmp/circleci-test-results
+      BASE_URL: https://luiyo.net
     # In CircleCI 1.0 we used a pre-configured image with a large number of languages and other packages.
     # In CircleCI 2.0 you can now specify your own image, or use one of our pre-configured images.
     # The following configuration line tells CircleCI to use the specified docker image as the runtime environment for you job.
@@ -56,7 +57,7 @@ jobs:
 
     - run:
         name: "Build Website With Hugo"
-        command: hugo -v -d docs --cleanDestinationDir --baseUrl=https://luiyo.net
+        command: hugo -v -d docs --cleanDestinationDir --baseUrl=${BASE_URL}
 
     - run:
         name: commit the changes
@@ -113,7 +114,7 @@ jobs:
               cd ~/LuisGC/blog
               # using token clone gh-pages branch
               git clone https://${GH_TOKEN}@github.com/$TARGET_REPO built_website > /dev/null
-              ll built_website
+              ls -laF built_website
             else
               echo "Not master branch, dry run only"
             fi
