--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -114,7 +114,7 @@ jobs:
               echo -e "Starting to deploy to Github Pages\n"
               cd ~/LuisGC/blog
               # using token clone gh-pages branch
-              git clone https://${GH_TOKEN}@github.com/$TARGET_REPO built_website > /dev/null
+              git clone https://github.com/$TARGET_REPO built_website > /dev/null
 
               # go into directory and copy data we're interested in to that directory
               cd built_website
@@ -133,7 +133,7 @@ jobs:
               else
                 echo "Content not changed, nothing to deploy"
               fi
-              
+
             else
               echo "Not master branch, dry run only"
             fi
