--- a/config.toml
+++ b/config.toml
@@ -141,10 +141,16 @@ baseName = "feed"
   weight = 5
 
 [[menu.main]]
+  name = "Talks"
+  url = "/talks/"
+  identifier = "fa fa-microphone"
+  weight = 6
+
+[[menu.main]]
   name = "RSS"
   url = "/blog/feed.xml"
   identifier = "fa fa-rss"
-  weight = 6
+  weight = 7
 
 
 #[[menu.main]]
